<resources>
    <string name="app_name" translatable="false">BigFont - TextSize</string>
    <string name="loading">Loading…</string>
    <string name="select_language">Select Language</string>
    <string name="next">Next</string>
    <string name="english">English</string>
    <string name="please_select_your_language">Please select your language</string>
    <string name="string_content_onboarding_first"><font color="#000000">Suitable for all subjects, </font><font color="#4169E1">especially the elderly and people with eye problems</font></string>
    <string name="string_content_onboarding_second"><font color="#000000">Improve your reading experience with </font><font color="#4169E1">up to 300% resizing</font></string>
    <string name="string_content_onboarding_third"><font color="#000000">Easy to use and quick to change with </font><font color="#4169E1">just a few touches</font></string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="language">Language</string>
    <string name="share">Share %1s</string>
    <string name="feedback">Feedback</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tutorial">Tutorial</string>
    <string name="setting">Setting</string>
    <string name="loading_ads">Loading Ads</string>
    <string name="title_ask_1">Please tick to help us improve our products.</string>
    <string name="header_ask_1">Are you an adult?</string>
    <string name="header_ask_2">What features do you expect the app to have?</string>
    <string name="scan_qr">Scan QR</string>
    <string name="magnifier_emulator">Magnifier Emulator</string>
    <string name="increase_font_size_only">Increase font size only</string>
    <string name="want_all_the_above_features">Want all the above features</string>
    <string name="email_us">If you have any other suggestions, <b>please email us!</b></string>
    <string name="apply">Apply</string>
    <string name="title_suggestion_1">1. Senior Citizen</string>
    <string name="title_suggestion_2">2. Myopia, astigmatism</string>
    <string name="title_suggestion_3">3. Eye disease</string>
    <string name="content_suggestion_1">Increase to 130% to 190% of default text size</string>
    <string name="content_suggestion_2">Increase to 130% to 150% of default text size</string>

    <string name="content_suggestion_3">Cataract: Increase text size to 150% to 190%</string>
    <string name="content_suggestion_4">Macular Degeneration: Increase font size to 160% to 190%</string>
    <string name="content_suggestion_5">Glaucoma: Increase font size to 150% to 170%</string>
    <string name="before_changer">Before Changer</string>
    <string name="preview">Preview</string>
    <string name="use">Use</string>
    <string name="suggested_use">Suggested use</string>
    <string name="defaultt">Default</string>
    <string name="custom">Custom</string>
    <string name="current_size">Current size</string>
    <string name="reset">Reset</string>
    <string name="suggestion">Suggestion</string>
    <string name="this_is_default_text_100">This is default text: 100%</string>
    <string name="jellyfish">JellyFish\n</string>
    <string name="diary">Diary</string>
    <string name="sp_chat">To keep the app running, we show a few ads. But don’t worry! The longer you stay,\n the fewer ads you’ll see ♡</string>
    <string name="write_your_diary">Write your diary</string>
    <string name="time">Time</string>
    <string name="mood">Mood</string>
    <string name="weather">Weather</string>
    <string name="tap_to_add_more_content">Tap to add more content</string>
    <string name="sunny">Sunny</string>
    <string name="rainy">Rainy</string>
    <string name="cloudy">Cloudy</string>
    <string name="foggy">Foggy</string>
    <string name="cold">Cold</string>
    <string name="windy">Windy</string>
    <string name="title">Title…</string>
    <string name="save">Save</string>
    <string name="textbox">Textbox</string>
    <string name="image">Image</string>
    <string name="checkbox">Checkbox</string>
    <string name="your_text_here">Your text here …</string>
    <string name="upload_image">Upload image</string>
    <string name="not_found_photos">Not found photos</string>
    <string name="done">Done</string>
    <string name="title_normal">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="content">Content</string>
    <string name="more">More</string>
</resources>