<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_85sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardBackgroundColor="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/btnTextbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_ripple_square_transparent"
                    >

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_text"
                        />

                    <TextView
                        style="@style/text_style_12_semi_bold"
                        android:textColor="@color/color_171717"
                        android:text="@string/textbox"
                        android:layout_marginTop="@dimen/_6sdp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnAddImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_ripple_square_transparent"
                    >

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_image"
                        />

                    <TextView
                        style="@style/text_style_12_semi_bold"
                        android:textColor="@color/color_171717"
                        android:text="@string/image"
                        android:layout_marginTop="@dimen/_6sdp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnAddCbx"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_ripple_square_transparent"
                    >

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_cbx"
                        />

                    <TextView
                        style="@style/text_style_12_semi_bold"
                        android:textColor="@color/color_171717"
                        android:text="@string/checkbox"
                        android:layout_marginTop="@dimen/_6sdp"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</layout>