<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.triversoft.diary.ui.language.LanguageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4169E1">


        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center|start"
            android:paddingHorizontal="@dimen/_16sdp"
            >

            <RelativeLayout
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_btn_ripple_rounded_transparent"
                >
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_back"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <TextView
                style="@style/text_style_16_bold"
                android:text="@string/select_language"
                android:textColor="@color/white_80"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/next"
                style="@style/text_style_10_regular"
                android:textColor="@color/black"
                android:gravity="center"
                android:alpha="0.3"
                android:background="@drawable/bg_btn_next_language"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_arr_right_new"
                />

        </LinearLayout>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/rvLanguages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_radius_top_16"
            app:layout_constraintBottom_toTopOf="@id/ads"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:paddingHorizontal="@dimen/_8sdp"
            tools:listitem="@layout/item_language"
            />

        <FrameLayout
            android:id="@+id/ads"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintDimensionRatio="360:214"
            app:layout_constraintBottom_toBottomOf="parent"
           />
            <FrameLayout
                android:id="@+id/layoutAds"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_radius_native"
                android:layout_marginHorizontal="@dimen/_16sdp"
                app:layout_constraintDimensionRatio="328:190"
                app:layout_constraintTop_toTopOf="@id/ads"
                app:layout_constraintBottom_toBottomOf="@id/ads"
                >
                <TextView
                    style="@style/text_style_16_bold"
                    android:text="@string/loading_ads"
                    android:textColor="@color/white_80"
                    android:layout_gravity="center"
                    />
            </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
