<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.triversoft.diary.ui.splash.SplashFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <View
            android:id="@+id/ivBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:alpha="0"
            />

        <ImageView
            android:id="@+id/imgBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:elevation="1dp"
            tools:src="@drawable/bg_sp_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:adjustViewBounds="true"
            tools:src="@drawable/ic_sp_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lnLoading"
            />
        <ImageView
            android:id="@+id/imgLogo2"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_160sdp"
            android:adjustViewBounds="true"
            tools:src="@drawable/ic_sp_jellyfish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lnLoading"
            />
        <ImageView
            android:id="@+id/imgLogo3"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_160sdp"
            android:adjustViewBounds="true"
            android:visibility="invisible"
            tools:src="@drawable/ic_sp_security"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lnLoading"
            />

        <RelativeLayout
            android:id="@+id/rlJellyChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/_120sdp"
            app:layout_constraintBottom_toBottomOf="@id/imgLogo3"
            >

            <ImageView
                android:id="@+id/ivJellyChat"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                tools:src="@drawable/bg_chat_sp"
                />

            <com.hanks.htextview.typer.TyperTextView
                android:id="@+id/tvChat"
                style="@style/text_style_12_regular"
                android:layout_width="@dimen/_200sdp"
                android:paddingVertical="@dimen/_24sdp"
            android:paddingHorizontal="@dimen/_16sdp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/sp_chat"
                android:textColor="#12457F"
                app:charIncrease="3"
                app:typerSpeed="80"
                android:layout_marginTop="@dimen/_16sdp"
                />
        </RelativeLayout>
<!--        <com.triversoft.bigfont.ui.views.GoldRadarView-->
<!--            android:id="@+id/imgLogo"-->
<!--            android:layout_width="@dimen/_280sdp"-->
<!--            android:layout_height="@dimen/_280sdp"-->
<!--            android:scaleType="fitXY"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.18"-->
<!--            />-->

        <LinearLayout
            android:id="@+id/lnLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_74sdp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_18_bold"
                    android:text="@string/jellyfish"
                    android:textColor="#12457F"
                    />
                <TextView
                    style="@style/text_style_18_regular"
                    android:text="@string/diary"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="#12457F"
                    />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/CustomProgressBar"
                android:layout_marginHorizontal="@dimen/_80sdp"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:progress="0" />

            <TextView
                style="@style/text_style_12_regular"
                android:text="@string/loading"
                android:textColor="#12457F"
                android:layout_marginTop="@dimen/_16sdp"
                />
            
        </LinearLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
